--- a/Microsoft.Toolkit.Uwp.UI.Controls/MasterDetailsView/MasterDetailsView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/MasterDetailsView/MasterDetailsView.xaml
@@ -32,6 +32,7 @@
                                         <Setter Target="DetailsColumn.Width" Value="0" />
                                         <Setter Target="DetailsPanel.(Grid.Column)" Value="0" />
                                         <Setter Target="NoSelectionPresenter.Visibility" Value="Collapsed"/>
+                                        <Setter Target="MasterPanel.BorderThickness" Value="0"/>
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="WideState">
@@ -46,7 +47,7 @@
                                 <ColumnDefinition x:Name="MasterColumn" Width="450"/>
                                 <ColumnDefinition x:Name="DetailsColumn" Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <Grid Background="{TemplateBinding ListPaneBackground}">
+                            <Grid x:Name="MasterPanel" Background="{TemplateBinding ListPaneBackground}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="0,0,1,0">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="*"/>
@@ -54,9 +55,7 @@
                                 <ContentPresenter x:Name="HeaderContentPresenter" ContentTemplate="{TemplateBinding MasterHeaderTemplate}" Content="{TemplateBinding MasterHeader}" Margin="12,0" Visibility="Collapsed" x:DeferLoadStrategy="Lazy"/>
                                 <ListView x:Name="MasterList" ItemsSource="{TemplateBinding ItemsSource}"
                                           Grid.Row="1"
-                                          BorderThickness="0,0,1,0"
                                           ItemContainerStyle="{TemplateBinding ItemContainerStyle}"
-                                          BorderBrush="{TemplateBinding BorderBrush}"
                                           SelectedItem="{Binding SelectedItem, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
                                           ItemTemplate="{TemplateBinding ItemTemplate}"/>
                             </Grid>
