DisplayMode now changed automatically with option to set different values

--- a/Microsoft.Toolkit.Uwp.UI.Controls/MasterDetail/MasterDetail.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/MasterDetail/MasterDetail.xaml
@@ -16,6 +16,8 @@
                 </TransitionCollection>
             </Setter.Value>
         </Setter>
+        <Setter Property="MinWidthForFullDisplayMode"
+                Value="600"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:MasterDetail">
