Allow the user to easily change the default width of the master pane

--- a/Microsoft.Toolkit.Uwp.UI.Controls/MasterDetailsView/MasterDetailsView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/MasterDetailsView/MasterDetailsView.xaml
@@ -38,6 +38,7 @@
                                         <Setter Target="DetailsPanel.(Grid.Column)" Value="0" />
                                         <Setter Target="NoSelectionPresenter.Visibility" Value="Collapsed"/>
                                         <Setter Target="MasterPanel.BorderThickness" Value="0"/>
+                                        <Setter Target="MasterPanel.Width" Value="NaN"/>
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="WideState">
@@ -49,10 +50,11 @@
                         </VisualStateManager.VisualStateGroups>
                         <Grid x:Name="RootPanel">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition x:Name="MasterColumn" Width="450"/>
+                                <ColumnDefinition x:Name="MasterColumn" Width="Auto"/>
                                 <ColumnDefinition x:Name="DetailsColumn" Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <Grid x:Name="MasterPanel" Background="{TemplateBinding MasterPaneBackground}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="0,0,1,0">
+                            <Grid x:Name="MasterPanel" Background="{TemplateBinding MasterPaneBackground}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="0,0,1,0"
+                                  Width="{TemplateBinding MasterPaneWidth}">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="*"/>
