--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeControl/BladePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/BladeControl/BladePage.xaml
@@ -47,16 +47,15 @@
                 <StackPanel Margin="24">
                     <TextBlock TextWrapping="WrapWholeWords" Text="This first blade has a hidden TitleBar, so you can't close it." />
                     <TextBlock TextWrapping="WrapWholeWords" Margin="0,12,0,0" Text="The buttons below toggle more blades on and off. The blades appear in the order that they're opened." />
-                    <Button Margin="0, 24, 0, 0"
-                            controls:BladeControl.ToggleBlade="BladeTest1"
-                            Content="Default blade" />
-                    <Button Margin="0, 24, 0, 0"
-                            controls:BladeControl.ToggleBlade="BladeTest2"
-                            Content="Custom titlebar" />
-                    <Button Margin="0, 24, 0, 0"
-                            controls:BladeControl.ToggleBlade="BladeTest3"
-                            Content="Custom close button" />
-                </StackPanel>
+                    <ToggleButton Margin="0, 24, 0, 0"
+                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=SecondBlade}"
+                                  Content="Default blade" />
+                    <ToggleButton Margin="0, 24, 0, 0"
+                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=ThirdBlade}"
+                                  Content="Custom titlebar" />
+                    <ToggleButton Margin="0, 24, 0, 0"
+                                  IsChecked="{Binding IsOpen, Mode=TwoWay, ElementName=FourthBlade}"
+                                  Content="Custom close button" />                </StackPanel>
             </controls:BladeItem>
 
             <controls:BladeItem Title="Default blade"
