Add Property PullToRefreshContent, ReleaseToRefreshContent Add Obsolete to PullToRefreshLabel, ReleaseToRefreshLabel
It is possible to have either PartDefaultIndicatorContent (TextBlock) or the new PullAndReleaseIndicatorContent (ContentPresenter) as pull-down indicator.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/PullToRefreshListView/PullToRefreshListView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/PullToRefreshListView/PullToRefreshListView.xaml
@@ -40,7 +40,8 @@
                         <Grid>
                             <Border x:Name="RefreshIndicator" VerticalAlignment="Top">
                                 <Grid>
-                                    <ContentPresenter x:Name="DefaultIndicatorContent" HorizontalAlignment="Center" FontSize="20"></ContentPresenter>
+                                    <!--<TextBlock x:Name="DefaultIndicatorContent" HorizontalAlignment="Center" FontSize="20"></TextBlock>-->
+                                    <ContentPresenter x:Name="PullAndReleaseIndicatorContent" HorizontalAlignment="Center" FontSize="20"></ContentPresenter>
                                     <ContentPresenter Content="{TemplateBinding RefreshIndicatorContent}"></ContentPresenter>
                                 </Grid>
                                 <Border.RenderTransform>
