No need for the name to be set

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MasterDetailsView/MasterDetailsViewPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MasterDetailsView/MasterDetailsViewPage.xaml
@@ -9,7 +9,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <controls:MasterDetailsView x:Name="MasterDetails" ItemsSource="{x:Bind Emails}"
+        <controls:MasterDetailsView ItemsSource="{x:Bind Emails}"
                                     Foreground="Black">
             <controls:MasterDetailsView.ItemTemplate>
                 <DataTemplate x:DataType="models:Email">
